# HarmTrace-Base

./: CHANGELOG.md  HarmTrace-Base.cabal  README.md
src/: Tests.hs
src/HarmTrace/Base/: Chord.hs  ChordTokenizer.hs  MusicRep.hs  MusicTime.hs  Parse.hs  Parsing.hs  Tests.hs  Time.hs
src/HarmTrace/Base/Chord/: Analysis.hs  Datatypes.hs  Internal.hs  Intervals.hs  PitchClass.hs
src/HarmTrace/Base/Parse/: ChordParser.hs  General.hs
tests/: Tests.hs
