
name:                HarmTrace-Base
version:             0.9.0.0
synopsis:            A lightweight library for parsing and unambiguously representing musical chords.
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              W. Bas de Haas
maintainer:          w.b.dehaas@uu.nl
-- copyright:           

category:            Sound
build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.8


library
  exposed-modules:     HarmTrace.Base.Parsing, HarmTrace.Base.MusicTime, 
                       HarmTrace.Base.MusicRep, HarmTrace.Base.ChordTokenizer
  
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  hs-source-dirs:       src  
  
  -- Other library packages from which modules are imported.
  build-depends:       base ==4.5.*, uu-parsinglib ==2.7.*, ListLike ==3.1.*
  