
name:                HarmTrace-Base
version:             0.9.0.0
synopsis:            A lightweight library for parsing and unambiguously representing musical chords.
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              W. Bas de Haas
maintainer:          w.b.dehaas@uu.nl
-- copyright:           

category:            Music
build-type:          Simple
tested-with:         GHC == 7.4.1
cabal-version:       >=1.8

library
  exposed-modules:     HarmTrace.Base.Parsing, HarmTrace.Base.MusicTime, 
                       HarmTrace.Base.MusicRep, HarmTrace.Base.ChordTokenizer
        
  hs-source-dirs:       src  
  
  build-depends:       base ==4.5.*, uu-parsinglib ==2.7.*, ListLike ==3.1.*
  
  
  ghc-options:         -Wall
                       -O2
  