name:                HarmTrace-Base
version:             1.4.0.0
synopsis:            Parsing and unambiguously representing musical chords.
description:         HarmTrace: Harmony Analysis and Retrieval of Music 
                     with Type-level Representations of Abstract
                     Chords Entities
                     .
                     We present HarmTrace-Base, a library for parsing and 
                     unambiguously representing musical chords.

copyright:           (c) 2012--2013 W. Bas de Haas and Jose Pedro Magalhaes
license:             LGPL-3
license-file:        LICENSE
author:              W. Bas de Haas and Jose Pedro Magalhaes
maintainer:          bas@chordify.net, dreixel@chordify.net 

category:            Music
build-type:          Simple
tested-with:         GHC == 7.4.1, GHC == 7.6.1
cabal-version:       >=1.8

library
  exposed-modules:     HarmTrace.Base.Chord,
                       HarmTrace.Base.Chord.Datatypes,
                       HarmTrace.Base.Chord.Analysis,
                       HarmTrace.Base.Chord.PitchClass,
                       HarmTrace.Base.Chord.Intervals,
                       HarmTrace.Base.Parse, 
                       HarmTrace.Base.Parse.General, 
                       HarmTrace.Base.Parse.ChordParser, 
                       HarmTrace.Base.MusicTime
  
  other-modules        HarmTrace.Base.Chord.Internal
  
  hs-source-dirs:      src  
  
  build-depends:       base >= 4.4 && < 4.7, 
                       uu-parsinglib ==2.7.4.*, 
                       ListLike ==3.1.*, 
                       binary >= 0.6.4, 
                       ghc-prim >= 0.2,
                       containers >= 0.5.0.0,
                       QuickCheck >= 1.0 && <3.0
  
  ghc-options:         -Wall
                       -O2
